--- a/Review-DSIEUR-skeleton.qmd
+++ b/Review-DSIEUR-skeleton.qmd
@@ -5,7 +5,7 @@ author:
     affiliations:
       - "SCUC-ISD Board of Trustees"
       - "Seat 6"
-date: "April 25, 2025"
+date: today
 date-format: long
 # bibliography: manual-refs.bib
 format:
@@ -15,8 +15,15 @@ format:
     include-after-body:    
       - text: |
           # <script type="text/javascript" src="reference-backlinks.js"></script>
+    default: true         
     code-copy: true
-    code-link: true
+    code-link: true        # This adds individual buttons
+    code-fold: true        # Hide code by default, show on click
+    code-summary: "Show the code"
+    code-overflow: wrap
+    code-block-bg: "#FAEBD7"
+    code-block-border-left: "#31BAE9"
+    embed-resources: true
     include-in-header: header.html
     css:
       - swart.css
@@ -28,12 +35,15 @@ format:
     fig-width: 12
     fig-height: 10
     fig-dpi: 300
+    html-math-method: katex
     df-print: paged
-    code-overflow: wrap
     toc: true
+    toc-float: true
     citeproc: true
     link-citations: true
     linestretch: 1.0
+    
+    
     
   typst:
     fig-width: 12
@@ -97,72 +107,143 @@ knitr:
 
 ---
 
+
 ```{r}
 #| label: setup
 #| include: false
+# R version 4.4.3 (2025-02-28)
+# Platform: x86_64-apple-darwin20
+# Running under: macOS Sequoia 15.6.1
+# Rstudio 2025.9.2.418 (Cucumberleaf Sunflower)
+# 
 
 # Prevent scientific notation globally
 options(scipen = 999)
+options(tigris_use_cache = TRUE)
+
+# install.packages(c("mapview", "survey", "srvyr", "arcgislayers"))
+
+# census_api_key("95496766c51541ee6f402c1e1a8658581285b759", install = TRUE, overwrite = TRUE)
+
 
 # load libraries
-library(readxl)
-library(writexl) 
-library(tidyr) 
-library(readr) 
-library(purrr) 
-library(stringr) 
-library(forcats) 
-library(lubridate) 
-library(janitor) 
-library(ggtext) 
-library(paletteer) 
-library(viridis) 
-library(RColorBrewer) 
-library(wesanderson) 
-library(dutchmasters) 
-library(gghighlight) 
-library(monochromeR) 
-library(ggforce) 
-library(ggthemes)
-library(gt)
-library(gtExtras)
-library(tidyverse)
-library(DT)
-library(plotly)
-library(ggplot2)
-library(kableExtra)
-library(tibble)
-library(patchwork)
-library(ppcor)
-library(ggdag)
-library(ggplot2)
-library(corrplot)
-library(ggcorrplot)
-library(car)
-library(WRS2)
-library(boot)
-library(BayesFactor)
-library(pwr)
-library(qgraph)
-library(scales)
-library(here)
+
+# library(BayesFactor) # Computation of Bayes Factors for Common Designs
+# library(boot) # Bootstrap Functions
+# library(broom) # Convert Statistical Objects into Tidy Tibbles
+# library(colorspace) # A Toolbox for Manipulating and Assessing Colors and Palettes
+# library(camcorder) # Record Your Plot History
+# library(car) # Companion to Applied Regression
+# library(corrplot) # Visualization of a Correlation Matrix
+# library(cowplot) # Streamlined Plot Theme and Plot Annotations for 'ggplot2'
+# library(dagitty) # Graphical Analysis of Structural Causal Models  
+# library(DiagrammeR) # Graph/Network Visualization 
+# library(dlookr) # Tools for Data Diagnosis, Exploration, Transformation 
+library(dplyr) # A Grammar of Data Manipulation
+# library(DT) # A Wrapper of the JavaScript Library 'DataTables'
+# library(dutchmasters) # Color Palettes based on Famous Paintings 
+# library(flexdashboard) # R Markdown Format for Flexible Dashboards
+# library(flextable) # Functions for Tabular Reporting  
+# library(forcats) # Tools for Working with Categorical Variables (Factors)
+# library(gganimate) # A Grammar of Animated Graphics
+# library(ggcorrplot) # Visualization of a Correlation Matrix using 'ggplot2'
+# library(ggdag) # Analyze and Create Elegant Directed Acyclic Graphs      
+# library(ggforce) # Accelerating 'ggplot2' 
+# library(gghighlight) # Highlight Lines and Points in 'ggplot2' 
+# library(ggplot2) # Create Elegant Data Visualizations Using the Grammar of Graphics
+# library(ggokabeito) # 'Okabe-Ito' Scales for 'ggplot2' and 'ggraph'
+# library(ggpubr) # 'ggplot2' Based Publication Ready Plots
+# library(ggrepel) # Automatically Position Non-Overlapping Text Labels with 'ggplot2'
+# library(ggtext) # Improved Text Rendering Support for 'ggplot2' 
+# library(ggthemes) # Extra Themes, Scales and Geoms for 'ggplot2'
+# library(glue) # Interpreted String Literals    
+# library(grid) # The Grid Graphics Package
+# library(gt) # Easily Create Presentation-Ready Display Tables
+# library(gtExtras) # Extending 'gt' for Beautiful HTML Tables
+# library(haven) # Import and Export 'SPSS', 'Stata' and 'SAS' Files
+# library(here) # A Simpler Way to Find Your Files
+# library(htmltools) # Tools for HTML
+# library(htmlwidgets) # HTML Widgets for R
+# library(janitor) # Simple Tools for Examining and Cleaning Dirty Data 
+# library(kableExtra) # Construct Complex Table with 'kable' and Pipe Syntax
+# library(knitr) # A General-Purpose Package for Dynamic Report Generation in R   
+# library(lavaan) # Latent Variable Analysis     
+# library(lubridate) # Make Dealing with Dates a Little Easier
+# library(monochromeR) # Easily Create, View and Use Monochrome Color Palettes 
+# library(paletteer) # Comprehensive Collection of Color Palettes 
+# library(patchwork) # The Composer of Plots
+# library(plotly) # Create Interactive Web Graphics via 'plotly.js'
+# library(ppcor) # Partial and Semi-Partial (Part) Correlation
+# library(prettycode) # Pretty Print R Code in the Terminal
+# library(purrr) # Functional Programming Tools
+# library(pwr) # Basic Functions for Power Analysis
+# library(qgraph) # Graph Plotting Methods, Psychometric Data Visualization and Graphical Model Estimation
+# library(qicharts2) # Quality Improvement Charts
+# library(RColorBrewer) # ColorBrewer Palettes 
+# library(readr) # Read Rectangular Text Data
+# library(readxl) # Read Excel Files
+# library(rethinking) # Statistical Rethinking book package
+# library(rlang) # Functions for Base Types and Core R and 'Tidyverse' Features
+# library(scales) # Scale Functions for Visualization
+# library(shiny) # Web Application Framework for R
+# library(shinyobjects) # Access Reactive Data Interactively   
+# library(skimr) # Compact and Flexible Summaries of Data
+# library(stringr) # Simple, Consistent Wrappers for Common String Operations
+# library(tibble) # Simple Data Frames
+# library(tidycensus) # Load US Census Boundary and Attribute Data as 'tidyverse' and 'sf'-Ready Data Frames
+# library(tidylog) # Logging for 'dplyr' and 'tidyr' Functions
+# library(tidyr) # Tidy Messy Data
+# library(tidytext) # Text Mining using 'dplyr', 'ggplot2', and Other Tidy Tools 
+# library(tsibble) # Tidy Temporal Data Frames and Tools        
+# library(viridis) # Colorblind-Friendly Color Maps for R 
+# library(visdat) # Preliminary Visualization of Data
+# library(vroom) # Read and Write Rectangular Text Data Quickly    
+# library(wesanderson) # A Wes Anderson Palette Generator 
+# library(writexl) # Export Data Frames to Excel 'xlsx' Format 
+# library(WRS2) # A Collection of Robust Statistical Methods
+
+
+
+# Force dplyr's select to take precedence
+select <- dplyr::select
+filter <- dplyr::filter
+
+# Options
+options(scipen = 999)
+options(qic.clshade = T) # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
+options(qic.linecol = 'black') # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
+options(qic.signalcol = "red") # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
+options(qic.targetcol = "purple") # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
+options(DT.options = list(dom = 'pBlfrti')) # Add buttons, filtering, and top (t) pagination controls
+options(shiny.maxRequestSize = 50 * 1024^2) # Set upload maximum to 50 MB
+options(tigris_use_cache = TRUE)
 
 
 # Set global theme for consistent plots
-theme_set(theme_minimal(base_size = 20) + 
-          theme(
-    plot.title = element_text(face = "bold", size = 26),    # adjust title size
-    plot.subtitle = element_text(face = "bold", size = 24), # adjust subtitle size
-    axis.title.x = element_text(face = "bold", size = 22),
-    axis.title.y = element_text(face = "bold", size = 22),
-    axis.text.x = element_text(face = "bold", size = 22, angle = 45, hjust = 1),
-    legend.position = "bottom",
-    strip.text = element_text(face = "bold"),
-    panel.spacing.x = unit(1.5, "cm"),  # Horizontal spacing only
-    panel.spacing.y = unit(1.5, "cm"),   # Vertical spacing only
-    plot.margin = margin(20, 20, 20, 20, "pt")
-    )
-)
+ggplot2::theme_set(ggplot2::theme_minimal(base_size = 20) + 
+                   ggplot2::theme(plot.title = ggplot2::element_text(face = "bold",
+                                                                      size = 26),
+                                  plot.subtitle = ggplot2::element_text(face = "bold",
+                                                                         size = 24),
+                                  axis.title.x = ggplot2::element_text(face = "bold",
+                                                                        size = 22),
+                                  axis.title.y = ggplot2::element_text(face = "bold",
+                                                                        size = 22),
+                                  axis.text.x = ggplot2::element_text(face = "bold",
+                                                                       size = 22,
+                                                                       angle = 45,
+                                                                       hjust = 1),
+                                  legend.position = "bottom",
+                                  strip.text = ggplot2::element_text(face = "bold"),
+                                  panel.spacing.x = grid::unit(1.5,
+                                                                "cm"),
+                                  panel.spacing.y = grid::unit(1.5,
+                                                                "cm"),
+                                  plot.margin = ggplot2::margin(20,
+                                                                 20,
+                                                                 20,
+                                                                 20,
+                                                                 "pt")))
 
 
 # Set seed for reproducibility
