--- a/Review-DSIEUR-skeleton.qmd
+++ b/Review-DSIEUR-skeleton.qmd
@@ -139,7 +139,7 @@ options(tigris_use_cache = TRUE)
 # library(dagitty) # Graphical Analysis of Structural Causal Models  
 # library(DiagrammeR) # Graph/Network Visualization 
 # library(dlookr) # Tools for Data Diagnosis, Exploration, Transformation 
-library(dplyr) # A Grammar of Data Manipulation
+# library(dplyr) # A Grammar of Data Manipulation
 # library(DT) # A Wrapper of the JavaScript Library 'DataTables'
 # library(dutchmasters) # Color Palettes based on Famous Paintings 
 # library(flexdashboard) # R Markdown Format for Flexible Dashboards
@@ -212,40 +212,116 @@ filter <- dplyr::filter
 options(scipen = 999)
 options(qic.clshade = T) # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
 options(qic.linecol = 'black') # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
-options(qic.signalcol = "red") # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
+options(qic.signalcol = "firebrick") # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
 options(qic.targetcol = "purple") # NO LONGER NEEDED; CHARTS ALL PREPARED WITH GGPLOT2 ONLY
 options(DT.options = list(dom = 'pBlfrti')) # Add buttons, filtering, and top (t) pagination controls
 options(shiny.maxRequestSize = 50 * 1024^2) # Set upload maximum to 50 MB
 options(tigris_use_cache = TRUE)
 
 
+flextable::set_flextable_defaults(
+  font.size = 14, 
+  font.family = "Cabin",
+  font.color = "black",
+  table.layout = "fixed",
+  border.color = "darkgray",
+  padding.top = 3, padding.bottom = 3,
+  padding.left = 4, padding.right = 4,
+  line_spacing = 1.3,
+  digits = 2,
+  decimal.mark = ",",
+  big.mark = " ",
+  na_str = "<na>"
+  )
+
+
 # Set global theme for consistent plots
-ggplot2::theme_set(ggplot2::theme_minimal(base_size = 20) + 
-                   ggplot2::theme(plot.title = ggplot2::element_text(face = "bold",
-                                                                      size = 26),
-                                  plot.subtitle = ggplot2::element_text(face = "bold",
-                                                                         size = 24),
-                                  axis.title.x = ggplot2::element_text(face = "bold",
-                                                                        size = 22),
-                                  axis.title.y = ggplot2::element_text(face = "bold",
-                                                                        size = 22),
-                                  axis.text.x = ggplot2::element_text(face = "bold",
-                                                                       size = 22,
-                                                                       angle = 45,
-                                                                       hjust = 1),
-                                  legend.position = "bottom",
-                                  strip.text = ggplot2::element_text(face = "bold"),
-                                  panel.spacing.x = grid::unit(1.5,
-                                                                "cm"),
-                                  panel.spacing.y = grid::unit(1.5,
-                                                                "cm"),
-                                  plot.margin = ggplot2::margin(20,
-                                                                 20,
-                                                                 20,
-                                                                 20,
-                                                                 "pt")))
+ggplot2::theme_set(
+  ggplot2::theme_minimal(base_size = 20) +
+    ggplot2::theme(
+      plot.title.position = "plot",
+      plot.title = ggtext::element_textbox_simple(
+        family = "Cabin",
+        face = "bold",
+        color = "darkgreen",
+        size = 22,
+        fill = "yellow",
+        lineheight = 1.0,
+        padding = ggplot2::margin(5.5, 5.5, 0.0, 5.5),
+        margin = ggplot2::margin(0, 0, 5.5, 0)
+      ),
+      plot.subtitle = ggtext::element_textbox_simple(
+        family = "Cabin",
+        color = "darkgreen",
+        face = "bold",
+        size = 20,
+        fill = "yellow",
+        lineheight = 1.0,
+        padding = ggplot2::margin(0.0, 5.5, 5.5, 5.5),
+        margin = ggplot2::margin(0, 0, 5.5, 0)
+      ),
+      plot.caption = ggtext::element_markdown(
+        family = "Cabin",
+        size = 16,
+        hjust = 1,
+        color = "darkblue",
+        face = "italic",
+        fill = "yellow",
+        lineheight = 1.0
+      ),
+      axis.text.x = ggplot2::element_blank(),
+      # ggtext::element_markdown(
+      #   family = "Cabin",
+      #   face = "bold",
+      #   color = "blue",
+      #   size = 16,
+      #   angle = 45,
+      #   hjust = 1
+      # ),
+      axis.title.x = ggplot2::element_blank(),
+      # ggtext::element_markdown(
+      #   family = "Cabin",
+      #   face = "bold",
+      #   color = "blue",
+      #   size = 16),
+      axis.text.y = ggplot2::element_blank(),
+      # ggtext::element_markdown(
+      #   family = "Cabin",
+      #   face = "bold",
+      #   color = "blue",
+      #   size = 16,
+      #   angle = 45,
+      #   hjust = 1
+      # ),
+      axis.title.y = ggplot2::element_blank(),
+      # ggtext::element_markdown(
+      #   family = "Cabin",
+      #   face = "bold",
+      #   color = "blue",
+      #   size = 16),
+      strip.text = ggtext::element_markdown(
+        family = "Cabin",
+        color = "black",
+        size = ggplot2::rel(1.1),
+        face = "italic",
+        margin = ggplot2::margin(2, 0, 0.5, 0, "lines")
+      ),
+      axis.text = ggtext::element_markdown(
+        family = "Cabin",
+        color = "black"),
+      panel.background = ggplot2::element_rect(fill = "white", color = NA),
+      plot.background = ggplot2::element_rect(fill = "white", color = NA),
+      legend.position = "none",
+      panel.spacing.x = grid::unit(1.5, "cm"),
+      panel.spacing.y = grid::unit(1.5, "cm"),
+      plot.margin = ggplot2::margin(20, 20, 20, 20, "pt")
+    )
+)
 
 
+
+
+  
 # Set seed for reproducibility
 set.seed(123)
 
